# activelog-backend

./: .env.example  .gitignore  AGENT.md  CHARTER.md  DOCKSIDE-EXAM.md  Docker-compose.predeploy.yml  Docker-compose.yml  Dockerfile.api  Dockerfile.worker  README.md  agent.ps1  deploy.ps1  operator-console.ps1  orchestrate.ps1  pyproject.toml  readme.md  rpa-agent.ps1
activelog_backend/: __init__.py  alert.py  export.py  logger.py  query.py  store.py
agent/inbox/: rpa.ndjson
agent/outbox/: progress.ndjson
api/: Dockerfile  app.py  main.py  requirements.txt
db/: schema.sql
memory/: JOURNAL.md
scripts/: Comprehensive Summary of the active.txt  bootstrap.ps1  cloudflar.txt  git clone httpsgithub_pat_11BOBIRWY.txt  look back on our chat we got sidetr.txt  orchestration-core.ps1
services/api/: app.py  dockerfile  requirements.txt
services/worker/: dockerfile  requirements.txt  worker.py
tests/: test_all.py
worker/: Dockerfile  worker.py
