[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activelog-backend"
version = "0.2.0"
description = "Structured logging with real-time querying and alerting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["logging", "structured", "querying", "alerting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["activelog_backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
